--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.9"
   }
 }
